@@ -16,18 +16,21 @@ import com.itextpdf.layout.Document;
 import com.itextpdf.layout.element.*;
 
 import com.itextpdf.layout.properties.UnitValue;
-import controle.api.back_end.dto.registros.in.TransferenciaDTO;
+import controle.api.back_end.dto.registros.in.RegistroCompletoCreateDto;
 import controle.api.back_end.dto.registros.mapper.RegistrosMapper;
 import controle.api.back_end.dto.registros.out.RegistroResponseDto;
 import controle.api.back_end.exception.EntidadeNaoEncontradaException;
 import controle.api.back_end.exception.InstituicaoInativaException;
 import controle.api.back_end.exception.SaldoInsuficienteException;
+import controle.api.back_end.factory.EventoFinanceiroFactory;
 import controle.api.back_end.factory.MovimentoFactory;
+import controle.api.back_end.factory.RecorrenciaFactory;
 import controle.api.back_end.model.categoria.CategoriaUsuario;
 import controle.api.back_end.model.configuracoes.Configuracoes;
 import controle.api.back_end.model.configuracoes.LimitePorCategoria;
 import controle.api.back_end.model.configuracoes.LimitePorInstituicao;
 import controle.api.back_end.model.eventoFinanceiro.*;
+import controle.api.back_end.model.eventoFinanceiro.recorrenciaFinanceira.RecorrenciaFinanceira;
 import controle.api.back_end.model.instituicao.InstituicaoUsuario;
 import controle.api.back_end.model.usuario.Usuario;
 import controle.api.back_end.repository.categoria.CategoriaRepository;
@@ -42,7 +45,8 @@ import controle.api.back_end.repository.instituicao.InstituicaoRepository;
 import controle.api.back_end.repository.instituicao.InstituicaoUsuarioRepository;
 import controle.api.back_end.repository.usuario.UsuarioRepository;
 import controle.api.back_end.specifications.EventoFinanceiroSpecifications;
-import controle.api.back_end.strategy.eventoFinanceiro.TransferenciaEvento;
+import controle.api.back_end.strategy.eventoFinanceiro.EventoFinanceiroStrategy;
+import controle.api.back_end.strategy.eventoFinanceiro.Registro;
 import controle.api.back_end.strategy.movimento.MovimentoResultado;
 import controle.api.back_end.strategy.movimento.MovimentoStrategy;
 import com.alibaba.excel.EasyExcel;
@@ -53,6 +57,7 @@ import java.io.ByteArrayOutputStream;
 
 import java.time.LocalDate;
 
+import controle.api.back_end.strategy.recorrenciaFinanceira.RecorrenciaStrategy;
 import org.apache.poi.ss.usermodel.HorizontalAlignment;
 import org.apache.poi.ss.usermodel.IndexedColors;
 import org.apache.poi.ss.usermodel.VerticalAlignment;
@@ -75,16 +80,17 @@ public class RegistroService {
     private final UsuarioRepository usuarioRepository;
     private final InstituicaoUsuarioRepository instituicaoUsuarioRepository;
     private final MovimentoFactory movimentoFactory;
+    private final EventoFinanceiroFactory eventoFinanceiroFactory;
+    private final RecorrenciaFactory recorrenciaFactory;
     private final InstituicaoRepository instituicaoRepository;
     private final CategoriaRepository categoriaRepository;
     private final InstituicaoService instituicaoService;
     private final LimitePorInstituicaoRepository limitePorInstituicaoRepository;
     private final LimitePorCategoriaRepository limitePorCategoriaRepository;
     private final ConfiguracoesRepository configuracoesRepository;
-    private final TransferenciaEvento transferenciaEvento;
     private final UsuarioService usuarioService;
 
-    public RegistroService(EventoFinanceiroRepository eventoFinanceiroRepository, EventoInstituicaoRepository eventoInstituicaoRepository, EventoDetalheRepository eventoDetalheRepository, CategoriaUsuarioRepository categoriaUsuarioRepository, UsuarioRepository usuarioRepository, InstituicaoUsuarioRepository instituicaoUsuarioRepository, MovimentoFactory movimentoFactory, InstituicaoRepository instituicaoRepository, CategoriaRepository categoriaRepository, InstituicaoService instituicaoService, LimitePorInstituicaoRepository limitePorInstituicaoRepository, LimitePorCategoriaRepository limitePorCategoriaRepository, ConfiguracoesRepository configuracoesRepository, TransferenciaEvento transferenciaEvento, UsuarioService usuarioService) {
+    public RegistroService(EventoFinanceiroRepository eventoFinanceiroRepository, EventoInstituicaoRepository eventoInstituicaoRepository, EventoDetalheRepository eventoDetalheRepository, CategoriaUsuarioRepository categoriaUsuarioRepository, UsuarioRepository usuarioRepository, InstituicaoUsuarioRepository instituicaoUsuarioRepository, MovimentoFactory movimentoFactory, EventoFinanceiroFactory eventoFinanceiroFactory, RecorrenciaFactory recorrenciaFactory, InstituicaoRepository instituicaoRepository, CategoriaRepository categoriaRepository, InstituicaoService instituicaoService, LimitePorInstituicaoRepository limitePorInstituicaoRepository, LimitePorCategoriaRepository limitePorCategoriaRepository, ConfiguracoesRepository configuracoesRepository, UsuarioService usuarioService) {
         this.eventoFinanceiroRepository = eventoFinanceiroRepository;
         this.eventoInstituicaoRepository = eventoInstituicaoRepository;
         this.eventoDetalheRepository = eventoDetalheRepository;
@@ -92,15 +98,101 @@ public class RegistroService {
         this.usuarioRepository = usuarioRepository;
         this.instituicaoUsuarioRepository = instituicaoUsuarioRepository;
         this.movimentoFactory = movimentoFactory;
+        this.eventoFinanceiroFactory = eventoFinanceiroFactory;
+        this.recorrenciaFactory = recorrenciaFactory;
         this.instituicaoRepository = instituicaoRepository;
         this.categoriaRepository = categoriaRepository;
         this.instituicaoService = instituicaoService;
         this.limitePorInstituicaoRepository = limitePorInstituicaoRepository;
         this.limitePorCategoriaRepository = limitePorCategoriaRepository;
         this.configuracoesRepository = configuracoesRepository;
-        this.transferenciaEvento = transferenciaEvento;
         this.usuarioService = usuarioService;
     }
+
+    public Registro createEventoFinanceiro(EventoFinanceiro entity,
+                                           List<EventoInstituicao> instituicoes,
+                                           EventoDetalhe detalhe) {
+
+        // 1. Validar usuário
+        Usuario user = usuarioRepository.findById(entity.getUsuario().getId())
+                .orElseThrow(() -> new EntidadeNaoEncontradaException(
+                        "Usuário de id: %s não encontrado."
+                                .formatted(entity.getUsuario().getId())
+                ));
+
+        entity.setUsuario(user);
+        entity.setDataRegistro(LocalDateTime.now());
+
+        // 2. Selecionar strategy pelo tipo
+        EventoFinanceiroStrategy strategy = eventoFinanceiroFactory.getStrategy(entity.getTipo());
+
+        // 3. Processar evento com a strategy
+        Registro registro = strategy.processar(entity, instituicoes, detalhe);
+
+        List<EventoFinanceiro> eventosSalvos = new ArrayList<>();
+        List<EventoInstituicao> instituicoesSalvas = new ArrayList<>();
+        EventoDetalhe detalheSalvo = null;
+
+        // 4. Persistência diferenciada por tipo
+        if (entity.getTipo() == Tipo.Gasto || entity.getTipo() == Tipo.Recebimento) {
+            // Apenas o primeiro evento
+            EventoFinanceiro eventoPrincipal = createEventoFinanceiro(
+                    registro.getEventosFinanceiros().getFirst()
+            );
+            eventosSalvos.add(eventoPrincipal);
+
+            // Vincular instituições usando regra de negócio
+            List<EventoInstituicao> insts = registro.getInstituicoesPorEvento().get(eventoPrincipal);
+            if (insts != null) {
+                instituicoesSalvas.addAll(createEventoInstituicao(insts, eventoPrincipal));
+            }
+
+            // Vincular detalhe usando regra de negócio
+            EventoDetalhe det = registro.getDetalhePorEvento().get(eventoPrincipal);
+            if (det != null) {
+                detalheSalvo = createGastoDetalhe(det, eventoPrincipal);
+            }
+
+        } else {
+            // Tipos que geram múltiplos eventos
+            for (EventoFinanceiro ev : registro.getEventosFinanceiros()) {
+                // Usa regra de negócio de criação de evento
+                EventoFinanceiro evSalvo = createEventoFinanceiro(ev);
+                eventosSalvos.add(evSalvo);
+
+                // Instituições específicas desse evento (com validações)
+                List<EventoInstituicao> insts = registro.getInstituicoesPorEvento().get(ev);
+                if (insts != null) {
+                    instituicoesSalvas.addAll(createEventoInstituicao(insts, evSalvo));
+                }
+
+                // Detalhe único desse evento (com validação de categorias)
+                EventoDetalhe det = registro.getDetalhePorEvento().get(ev);
+                if (det != null) {
+                    detalheSalvo = createGastoDetalhe(det, evSalvo);
+                }
+            }
+        }
+
+        // 5. Montar os maps corretos antes de retornar
+        Map<EventoFinanceiro, List<EventoInstituicao>> instituicoesMap = new HashMap<>();
+        for (EventoFinanceiro ev : eventosSalvos) {
+            List<EventoInstituicao> instsDoEvento = instituicoesSalvas.stream()
+                    .filter(inst -> inst.getEventoFinanceiro().equals(ev))
+                    .toList();
+            instituicoesMap.put(ev, instsDoEvento);
+        }
+
+        Map<EventoFinanceiro, EventoDetalhe> detalheMap = new HashMap<>();
+        if (detalheSalvo != null) {
+            detalheMap.put(eventosSalvos.getFirst(), detalheSalvo);
+        }
+
+// 6. Retornar registro persistido com os vínculos corretos
+        return new Registro(eventosSalvos, instituicoesMap, detalheMap);
+
+    }
+
 
     public EventoFinanceiro createEventoFinanceiro(EventoFinanceiro entity) {
 
@@ -119,46 +211,23 @@ public class RegistroService {
         return eventoFinanceiroRepository.save(entity);
     }
 
-    public List<EventoInstituicao> createEventoInstituicaoTransferencia(EventoInstituicao eventoInstituicao,
-                                                                        EventoFinanceiro eventoFinanceiro,
-                                                                        Integer destino_id){
+    public List<RegistroResponseDto> createEventosRecorrentes(RecorrenciaFinanceira recorrencia, RegistroCompletoCreateDto dto) {
+        RecorrenciaStrategy strategy = recorrenciaFactory.getStrategy(recorrencia.getPeriodicidade());
+        List<EventoFinanceiro> eventos = strategy.gerarEventos(recorrencia, recorrencia.getDataFim());
 
-        if (!eventoFinanceiroRepository.existsById(eventoFinanceiro.getId())) {
-            throw new EntidadeNaoEncontradaException(
-                    "Evento Financeiro de id: %s não encontrado"
-                            .formatted(eventoFinanceiro.getId())
-            );
+        List<RegistroResponseDto> responses = new ArrayList<>();
+        for (EventoFinanceiro evento : eventos) {
+            EventoFinanceiro saved = createEventoFinanceiro(evento);
+            List<EventoInstituicao> insts = createEventoInstituicao(
+                    RegistrosMapper.toEntityEvento(dto.getInstituicao()), saved);
+            EventoDetalhe detalhe = createGastoDetalhe(
+                    RegistrosMapper.toEntityGasto(dto.getDetalhe()), saved);
+
+            responses.add(RegistrosMapper.toResponse(saved, insts, detalhe));
         }
-        List<InstituicaoUsuario> instituicaoUsuario = instituicaoUsuarioRepository.findInstituicaoUsuarioByEventoInstituicao_Id(eventoInstituicao.getId());
-        eventoInstituicao.setInstituicaoUsuario(instituicaoUsuario.getFirst());
-
-
-        InstituicaoUsuario destino = instituicaoUsuarioRepository.findById(destino_id)
-                .orElseThrow(() ->
-                        new EntidadeNaoEncontradaException("Instituição usuario de id: %d não encontrado."
-                                .formatted(destino_id)
-                        )
-                );
-
-        //TransferenciaDTO processar = transferenciaEvento.processar(eventoFinanceiro, eventoInstituicao, destino);
-        List<EventoInstituicao> listaRecebedora = new ArrayList<>();
-
-        //EventoInstituicao recebedora = processar.getEventoInstituicao();
-        //EventoFinanceiro eventoRecebedora = processar.getEventoFinanceiro();
-
-//        recebedora.setTipoMovimento(eventoInstituicao.getTipoMovimento());
-//        recebedora.setEventoFinanceiro(eventoRecebedora);
-//        recebedora.setParcelas(1);
-//        recebedora.setValor(eventoInstituicao.getValor());
-//        recebedora.setInstituicaoUsuario(destino);
-//        listaRecebedora.add(recebedora);
-//        eventoFinanceiroRepository.save(eventoRecebedora);
-//        eventoInstituicaoRepository.save(recebedora);
-//        eventoInstituicao.setEventoFinanceiro(eventoFinanceiro);
-//        eventoInstituicaoRepository.save(eventoInstituicao);
-
-        return listaRecebedora;
+        return responses;
     }
+
 
     public List<EventoInstituicao> createEventoInstituicao(List<EventoInstituicao> entities,
                                                            EventoFinanceiro eventoFinanceiro) {
@@ -237,7 +306,8 @@ public class RegistroService {
                                 new EntidadeNaoEncontradaException("Categoria Usuário de id: %d não encontrada."
                                         .formatted(cu.getId()))
                         ))
-                .toList();
+                .collect(Collectors.toList());
+
 
         entity.setEventoFinanceiro(eventoFinanceiro);
         entity.setCategoriaUsuario(categorias);
@@ -302,7 +372,7 @@ public class RegistroService {
 
 
         return eventos.stream()
-                .map(e -> RegistrosMapper.toResponse(e, e.getEventoInstituicao(), e.getGastoDetalhe()))
+                .map(e -> RegistrosMapper.toResponse(e, e.getEventoInstituicoes(), e.getGastoDetalhe()))
                 .collect(Collectors.toList());
 
     }
